--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="color-scheme" content="light dark" />
+    <!-- theme-color 使用 1 条兜底 + 2 条媒体查询：兼容旧浏览器并适配系统主题 -->
+    <meta name="theme-color" content="#f8f9fc" />
     <meta name="theme-color" content="#1a1d2e" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#f8f9fc" media="(prefers-color-scheme: light)" />
     <title>电厂智能问答系统</title>
